--- a/index.html
+++ b/index.html
@@ -1,7 +1,39 @@
 <!DOCTYPE html>
-<head><title>Simon Glew - Calculator</title></head>
+<head>
+	<link href = "index.css" rel = "stylesheet">
+	<title>Simon Glew - Calculator</title>
+</head>
 <body>
-
-
-<script src="index.js"></script>
+	<div id = "calculator">
+		<div id = "display"></div>
+		<p></p>
+		<div id = "buttons">
+			<div id = "row1">
+				<button id = "7" onclick = "AddDigit('7')">7</button>
+				<button id = "8" onclick = "AddDigit('8')">8</button>
+				<button id = "9" onclick = "AddDigit('9')">9</button>
+				<button id = "div" onclick = "Operate('/')">/</button>
+			</div>
+			<div id = "row1">
+				<button id = "4" onclick = "AddDigit('4')">4</button>
+				<button id = "5" onclick = "AddDigit('5')">5</button>
+				<button id = "6" onclick = "AddDigit('6')">6</button>
+				<button id = "mul" onclick = "Operate('*')">*</button>
+			</div>
+			<div id = "row1">
+				<button id = "1" onclick = "AddDigit('1')">1</button>
+				<button id = "2" onclick = "AddDigit('2')">2</button>
+				<button id = "3" onclick = "AddDigit('3')">3</button>
+				<button id = "sub" onclick = "Operate('-')">-</button>
+			</div>
+			<div id = "row1">
+				<button id = "0" onclick = "AddDigit('0')">0</button>
+				<button id = "clear" onclick = "Clear()">C</button>
+				<button id = "eq" onclick = "Calculate()">=</button>
+				<button id = "add" onclick = "Operate('+')">+</button>
+			</div>
+		</div>
+	</div>
+	<script src="index.js"></script>
 </body>
+</html>
