finished calculator + comments on js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</div>
 		<div id = "buttons">
 			<div id = "row1">
-				<button id = "clear" onclick = "clear()">AC</button>
+				<button id = "clear" onclick = "clearDisplay()">AC</button>
 				<button id = "changeSign" onclick = "changeSign()">+/-</button>
 				<button id = "percentage" onclick = "percentage()">%</button>
 				<button id = "div" onclick = "operate('/')">/</button>
